<resources>
    <string name="app_name">SmartShoot</string>
    <string name="game">Game</string>
    <string name="menu">menu</string>
    <string name="connect">Connect</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_with_friends">Play with friends</string>
    <string name="player_detection">Player detection</string>
</resources>